fix map not showing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,3 +74,8 @@ body {
   -webkit-background-clip: text;							/* <-- have the gradient clip to the text. */
   -webkit-text-fill-color: transparent;		
 }
+
+.leaflet-container {
+  width: "100%";
+  height: "100%";
+}
